--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="desc">The Karissa V-Neck Tee features a semi-fitted shape that\'s flattering for every figure. You can hit the gym with confidence while it hugs curves and hides common \"problem\" areas. Find stunning women\'s cocktail dresses and party dresses.</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="description">Description</string>
+    <string name="circle_num_template">1</string>
 </resources>
