--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="login">Login</string>
     <string name="password_cap">Password</string>
     <string name="please_login">Please login</string>
+    <string name="please_sign_up">Please sign up</string>
+    <string name="sign_up">Sign up</string>
+    <string name="username">Username</string>
+    <string name="name">name</string>
 </resources>
